- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    None
- 
    6.5
- 
        
- 
        c0b5c1567 (dev)
The current design of sliders in windowsvista style does not fit into the native look of Windows 11. Instead of a bar as slider position indicator, Windows 11 uses a round Radiobutton like indicator. Also the slider track is rounded at both ends. The color on the slider track left of the indicator position is blue and right of the slider track a dark grey.
- is required for
- 
                    QTBUG-97668 Improve Windows 11 look & feel -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-113511 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 477836,95 | Introduce Windows 11 style sliders in QWindows11Style | dev | qt/qtbase | Status: MERGED | +2 | 0 |